# yshard-rs

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: commands.rs  lib.rs  shard.rs
hack/: build-darwin.sh  build-linux-amd64.sh  build-linux-arm64.sh
src/: main.rs
