[package]
name = "cli"
version = "0.0.1"
authors = ["Ben Vickers <ben881@gmail.com>"]
description = "CLI interface to split a multi-document yaml file into multiple files, using a jq groupby"
edition = "2018"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
