[package]
name = "core"
version = "1.0.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "The application core code"
edition = "2018"

[dependencies]
utils = { path = "../utils" }

rand = "0.7.3"
log = "0.4.11"
serde_json = "1.0"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]

[dependencies.jq-rs]
version = "0.4.1"
