[package]
name = "core"
version = "0.0.1"
authors = ["Ben Vickers <ben881@gmail.com>"]
description = "core code for splitting a multi-document yaml file into multiple files, using a jq groupby"
edition = "2018"

[dependencies]
utils = { path = "../utils" }

rand = "0.7.3"
log = "0.4.11"
serde_json = "1.0"
serde_yaml = "0.8.17"
yaml-rust = "0.4"
sanitize-filename = "0.3.0"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]

[dependencies.jq-rs]
version = "0.4.1"
